2005-08-06  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpuimanager.c (gimp_ui_manager_ui_popup): applied
	patch from Robert Ögren that frees the event returned by
	gtk_get_current_event(). Fixes bug #312017.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_pen):
	* app/tools/gimpforegroundselecttool.c: ccorrectly handle a stroke
	consisting of just a single point.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.[ch]
	* libgimpwidgets/gimpwidgets.def: added gimp_prop_hscale_new().

	* app/tools/gimpforegroundselectoptions.c: added a control for the
	stroke width.

	* app/tools/gimpforegroundselecttool.c: cancel the tool if the
	active drawable or the image size changes.

	* app/widgets/gimpcontrollerlist.c: fixed signedness warning.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* app/display/gimpcanvas.c (gimp_canvas_set_custom_gc) do not
	drop the reference if the same custom GC is being set again.

	* app/display/gimpdisplayshell-draw.[ch]
	* app/display/gimpdisplayshell-handlers.c
	* app/display/gimpdisplayshell.[ch]: added GC and methods to draw
	on the canvas with a solid pen.

	* app/tools/gimpforegroundselectoptions.[ch]
	* app/tools/gimpforegroundselecttool.c: draw using the new pen
	functions. Scale the stroke width with the display scale.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* app/core/gimppalette-import.c:
	* app/paint-funcs/paint-funcs-generic.h
	* app/paint-funcs/paint-funcs.c: fixed signedness warnings.

2005-08-05  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/test-sphere.scm: Added missing argument
	in define statement. Fixed spelling errors.

	* ChangeLog: Corrected my e-mail address.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* app/batch.c: canonicalize hardcoded procedure names.

	* app/base/siox.[ch]
	* app/core/gimpdrawable-foreground-extract.[ch]
	* app/tools/gimpforegroundselecttool.c: restrict the working area